syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.ray.examples.user_defined_protos";
option java_outer_classname = "UserDefinedProtos";

package userdefinedprotos;

message ImageData {
  string url = 1;
  string filename = 2;
}
message ImageClass {
  repeated string classes = 1;
  repeated float probabilities = 2;
}
service ImageClassificationService {
  rpc Predict(ImageData) returns (ImageClass);
}
